# pfn

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
archive/bootstrap-v1/bootstrap/: AST.py  Codegen.py  Lexer.py  Main.py  Parser.py  Tests.py  Token.py  TypeChecker.py  Types.py
docs/: compiler-architecture.md  language-design.md  python-interop.md  roadmap.md  syntax-reference.md  type-system.md
docs/tutorials/: getting-started.md  python-interop-tutorial.md  type-system-tutorial.md
examples/: README.md  hello.pfn  typed.pfn
examples/cli/: todo.pfn
examples/data/: analysis.pfn
examples/web/: api.pfn
scripts/: bootstrap_test.py
src/pfn/: __init__.py
src/pfn/bootstrap/: AST.pfn  AST.py  Codegen.pfn  Codegen.py  Lexer.pfn  Lexer.py  Main.pfn  Main.py  Parser.pfn  Parser.py  README.md  Tests.pfn  Tests.py  Token.pfn  Token.py  TypeChecker.pfn  TypeChecker.py  Types.pfn  Types.py  __init__.py
src/pfn/cli/: __init__.py
src/pfn/codegen/: __init__.py  codegen.py  statement.py  statement_codegen.py
src/pfn/effects/: __init__.py  handlers.py  infer.py
src/pfn/ir/: __init__.py  core.py
src/pfn/lexer/: __init__.py  lexer.py  tokens.py
src/pfn/optimizer/: __init__.py  passes.py
src/pfn/parser/: __init__.py  ast.py  parser.py
src/pfn/python/: __init__.py  interop.py
src/pfn/repl/: __init__.py
src/pfn/runtime/: __init__.py  core.py  pattern.py  python_compat.py  types.py  utils.py
src/pfn/typechecker/: __init__.py  classes.py  exhaustiveness.py  infer.py  rows.py
src/pfn/types/: __init__.py  types.py
src/stdlib/: __init__.py
stdlib/: Dict.pfn  IO.pfn  List.pfn  Option.pfn  Result.pfn  Set.pfn  String.pfn  prelude.pfn
tests/: conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_codegen.py  test_effects.py  test_gadt.py  test_lexer.py  test_package.py  test_parser.py  test_parser_features.py  test_phase2_features.py  test_py_export.py  test_py_export_codegen.py  test_python_calls.py  test_python_interop.py  test_python_interop_full.py  test_python_types.py  test_typechecker.py  test_typeclass_resolution.py  test_typeclasses.py
