[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfn"
dynamic = ["version"]
description = "A pure functional programming language that compiles to Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Pfn Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed",
]
keywords = [
    "functional",
    "programming-language",
    "compiler",
    "type-system",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
pfn = "pfn.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/pfn"
Documentation = "https://github.com/yourorg/pfn#readme"
Repository = "https://github.com/yourorg/pfn"
Issues = "https://github.com/yourorg/pfn/issues"

[tool.hatch.version]
path = "src/pfn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pfn"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/stdlib",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "bootstrap: tests related to self-compilation",
]
filterwarnings = [
    "error",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "RUF",    # ruff-specific rules
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pfn"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# coverage configuration
[tool.coverage.run]
source = ["src/pfn"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.paths]
source = [
    "src/pfn",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
